# py-neetcode

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cspell.config.yaml  iterm.itermcolors  justfile  mypy.ini  poetry.toml  pyproject.toml  pytest.ini  ruff.toml  setup.py
cython/: pyproject.toml  setup.py
cython/cython_lib/: __init__.py
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
rust/src/array/: circular_index_cover_cost.rs  consecutive_int_missing.rs  mod.rs  rotated_sorted_array_min.rs  rotated_sorted_array_search.rs  search_element_peak.rs  search_k_elements_closest_to_origin.rs  search_min_max_diff_with_operation.rs  search_two_indexes_sum_to_k.rs  sorted_array_two_indexes_sum_to_k.rs  stream_find_median_element.rs  stream_sliding_window_maxes.rs  subarray_addition_multiple.rs  subarray_count_sum_divisible_by_k.rs  subarray_count_sum_to_k.rs  subarray_longest_consecutive.rs  subarray_longest_sum_within_k.rs  subarray_max_area_containable.rs  subarray_max_area_rectangle.rs  subarray_max_product.rs  subarray_min_size_sum.rs  subarray_product_except_self.rs  subarray_shortest_remove_to_sort.rs  subarray_total_patch_containable.rs  subsequence_fixed_size_max_min_gap.rs  subsequence_min_jumps.rs  triplet_check_increasing.rs  triplet_count_increasing_sum_within_k.rs
rust/src/string/: combination_generate_parentheses.rs  combination_validate_parentheses.rs  group_anagrams.rs  mod.rs  split_count_equal_num_char.rs  splits_char_unique_part.rs  splits_count_by_dict.rs  splits_count_equal_unique_chars.rs  splits_count_match_by_dict.rs  subsequence_count_longest_common_two_strings.rs  subsequence_count_match_target.rs  substring_check_target_anagram.rs  substring_longest_char_replacement.rs  substring_longest_palindrome.rs  substring_longest_without_repeating_characters.rs
src/array/: circular_index_cover_cost.py  combination_count_sum_to_k.py  combination_fewest_elements_sum_to.py  combination_generate_sum_to_k.py  combination_generate_to_sum.py  combination_sum.py  consecutive_int_missing.py  container_with_most_water.py  elements_index_sum.py  find_k_elements_closest_to_origin.py  longest_consecutive_sequence.py  rotated_sorted_array_min.py  rotated_sorted_array_search.py  search_element_peak.py  search_k_elements_closest_to_origin.py  search_min_max_diff_with_operation.py  search_three_indexes_sum_to_k.py  search_two_indexes_sum_to_k.py  sorted_array_two_indexes_sum_to_k.py  stream_find_median_element.py  stream_sliding_window_maxes.py  stream_sliding_window_median.py  subarray_addition_multiple.py  subarray_count_sum_divisible_by_k.py  subarray_count_sum_to_k.py  subarray_max_product.py  (+17 more)
tests/: benchmark.py
(+250 files in other folders)
