[tool.poetry]
package-mode = false # as a service (not package) repo, which clears up `--no-root` for `poetry install`

[tool.poetry.dependencies]
python = ">=3.10, <3.12" # python version used by poetry to be compatible with all dependencies

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
pre-commit = "^3.5.0"
python-dotenv = { version = "^1.0.1", extras = ["cli"] }
ruff = "^0.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.1"
pytest-only = "^2.0.0"
pytest-picked = "^0.5.0"
pytest-unordered = "^0.6.0"
