# uv dependencies syntax: https://docs.astral.sh/uv/concepts/projects/dependencies/#index
# uv supports dependency sources of [index, git, url, path, workspace]

[tool.uv]
package = false
default-groups = "all"

[project]
name = "py-neetcode"
version = "0.1.0"

requires-python = ">=3.12"
dependencies = []

[dependency-groups]

test = [
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
    "pytest-env>=1.1.5",
    "pytest-only>=2.1.2",
    "pytest-picked>=0.5.1",
    "pytest-unordered>=0.7.0",
    "pytest>=8.3.5",
    "setuptools>=80.7.1",
    "pytest-memray>=1.7.0",
]

dev = [
    "cython-lint>=0.16.7",
    "cython>=3.1.2",
    "ipykernel>=6.29.4,<7.0.0",
    "mypy>=1.9.0,<2.0.0",
    "nbstripout>=0.7.1,<1.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "python-dotenv[cli]>=1.0.1,<2.0.0",
    "ruff>=0.5.4,<1.0.0",
    "ty>=0.0.1a5",
]

typing = ["types-requests>=2.32.0.20240712,<3.0.0"]
