[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.12"
pyo3 = { version = "0.25", features = [
    "extension-module",
    "macros",
] }

[profile.release]
opt-level = 3          # explicit (default), keeps intent clear
lto = "fat"            # "fat" is a bit stronger than true/thin
codegen-units = 1      # better inlining/opt across crates
debug = false          # smaller, a tad faster
overflow-checks = false # (optional) faster, but be sure math can't overflow
strip = "symbols"      # smaller .so/.pyd (leave off if you need symbols)
